build/resources/test/errors/P2/public/assign03.mavl
function void main(){
    var int x;
    
    // redefinition
    var int x;
}
